--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,178 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap");
+
+:root {
+  --primary: #fd7a39;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  margin: 0;
+  font-family: "Nunito";
+  color: #333;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
+  padding: 20px;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  max-width: 950px;
+  margin: 0 auto;
+  border-bottom: 1px solid #f2f2f2;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar h1 {
+  color: var(--primary);
+  font-size: 28px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.navbar .links {
+  margin-left: auto;
+}
+
+.navbar a {
+  text-decoration: none;
+  padding: 6px;
+  margin-left: 16px;
+  font-weight: bold;
+}
+
+.navbar a:hover {
+  color: var(--primary);
+}
+
+.content {
+  max-width: 950px;
+  margin: 20px auto 40px;
+  padding: 20px;
+}
+
+/* blog list */
+.blog-list h2 {
+  text-align: left;
+  padding: 0 20px;
+  font-size: 28px;
+}
+
+.blog-preview {
+  padding: 10px 20px;
+  margin: 20px 0;
+  border-bottom: 1px solid #fafafa;
+}
+
+.blog-preview:hover {
+  cursor: pointer;
+  border-radius: 5px solid #fafafa;
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+}
+
+.blog-preview h3 {
+  font-size: 20px;
+  color: var(--primary);
+  margin-bottom: 8px;
+}
+
+.blog-preview a {
+  text-decoration: none;
+}
+
+/* Blog Form */
+.blogForm {
+  max-width: 400px;
+  margin: 0 auto;
+  text-align: center;
+  padding: 0 20px;
+}
+
+.create h2 {
+  font-size: 28px;
+  color: var(--primary);
+  margin-bottom: 30px;
+}
+
+.blogForm label {
+  text-align: left;
+  display: block;
+  color: #333;
+}
+
+.blogForm input,
+.blogForm textarea {
+  width: 100%;
+  padding: 8px 10px;
+  border: 1px solid #333;
+  display: block;
+  box-sizing: border-box;
+  border-radius: 4px;
+  margin: 10px 0 18px;
+  color: #000;
+}
+
+/* blog details page */
+.blog-details h2 {
+  font-size: 20px;
+  color: var(--primary);
+  margin-bottom: 10px;
+}
+
+.blog-details article {
+  margin: 20px auto;
+  max-width: 500px;
+  padding: 5px 20px;
+}
+
+.blog-details article div.blog {
+  padding: 0 0 40px;
+}
+
+.edit-logo {
+  float: right;
+  font-size: 25px;
+  color: #f1356d;
+  font-size: 20px;
+}
+
+.deleteBtn {
+  background: #f1356d !important;
+  color: #fff;
+}
+
+.buttonGroup a,
+.buttonGroup button {
+  font-size: 14px;
+  border: 0;
+  padding: 8px 14px;
+  border-radius: 4px;
+  cursor: pointer;
+  color: #ddd;
+}
+
+.buttonGroup a {
+  float: left;
+  text-decoration: none;
+  background: #333;
+}
+
+.buttonGroup button {
+  float: right;
+  background: var(--primary);
+}
+
+.buttonGroup a:hover,
+.buttonGroup button:hover {
+  opacity: 0.9;
+  color: #fff;
+}
+
+@media screen and (max-width: 650px) {
+  .content {
+    padding: 10px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .navbar h1 {
+    font-size: 20px;
+  }
+
+  .navbar a {
+    display: block;
+    margin-left: 5px;
   }
 }
